Fix decimal value overflow its container

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,7 @@
   margin-bottom: 5px;
   font-size: 80px;
   text-align: right;
+  overflow: hidden;
 }
 
 .button-body {
